<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:background="@drawable/dialog_background"
    android:padding="20dp">
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/friends_ask_location"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:id="@+id/ask_location_button" />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ask_location_button"
        android:text="@string/friends_send_location"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:id="@+id/send_location_button"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send_location_button"
        android:text="@string/friends_remove_friend"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:id="@+id/remove_button"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_below="@+id/remove_button"
        android:layout_centerHorizontal="true"
        android:id="@+id/cancel_button" />
</RelativeLayout>