<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:background="@drawable/dialog_background"
    android:padding="20dp">
    <TextView
        android:text="@string/profile_select_picture"
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/dialog_title">
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_from_gallery"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:id="@+id/gallery_button" />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gallery_button"
            android:text="@string/profile_from_camera"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:id="@+id/camera_button"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/camera_button"
            android:text="@string/profile_picture_remove"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:id="@+id/remove_button"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_below="@+id/remove_button"
            android:layout_centerHorizontal="true"
            android:id="@+id/cancel_button" />
    </RelativeLayout>
</RelativeLayout>