<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main"
    android:clickable="true">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/marker_icon"
        android:id="@+id/app_icon"
        android:tint="@color/color_text_light"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_icon"
        android:id="@+id/title_text"
        android:text="@string/welcome_title"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="24sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_text"
        android:id="@+id/info_text"
        android:text="@string/welcome_info"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="16sp"/>
    <com.facebook.login.widget.LoginButton
        facebook:com_facebook_login_text="@string/welcome_facebook"
        facebook:paddingStart="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_text"
        android:id="@+id/fb_login_button"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/fb_login_button"
        android:text="@string/welcome_to_app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/anonymous_login"/>
</RelativeLayout>