<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_main"
    android:clickable="true">
    <include layout="@layout/menu_back"
        android:id="@+id/menu_back"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_friends_invite"
        android:id="@+id/invite_friends"
        android:layout_below="@id/menu_back"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_text"
        android:layout_below="@id/invite_friends"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@color/color_main_secondary"
        android:hint="@string/search_friends_by_name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/facebook_friends_info"
        android:layout_below="@+id/search_text"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/search_friends_facebook_info"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/users_list"
        android:divider="@null"
        android:layout_below="@+id/facebook_friends_info">
    </ListView>
</RelativeLayout>
