<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_main">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friends_start_share"
                android:id="@+id/start_share_button"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friend_requests"
                android:padding="10dp"
                android:layout_below="@id/start_share_button"
                android:id="@+id/friend_requests_text"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/friend_requests"
                android:layout_below="@id/friend_requests_text"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/friend_info_container"
                android:layout_below="@id/friend_requests">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:src="@drawable/sharing_circle"
                    android:id="@+id/sharing_ball"
                    android:visibility="gone"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/friends_no_friends"
                    android:padding="10dp"
                    android:id="@+id/friends_info"/>
            </LinearLayout>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/friend_list"
                android:layout_below="@id/friend_info_container"
                android:divider="@null"/>
            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/friends_add_friends"
                android:id="@+id/add_friends_button"
                android:layout_below="@id/friend_list"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>
        </RelativeLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/color_main_secondary"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>
</RelativeLayout>
