<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_main"
    android:padding="10dp">
    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/profile_picture_container"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/default_profile_picture"
            android:id="@+id/profile_picture"/>
        <RelativeLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/camera_icon"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/circle"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/camera_icon"/>
        </RelativeLayout>
    </RelativeLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first_name"
        android:layout_below="@+id/profile_picture_container"
        android:inputType="textCapWords"
        android:hint="@string/profile_firstname"
        android:text="Arttu"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/last_name"
        android:inputType="textCapWords"
        android:hint="@string/profile_lastname"
        android:layout_below="@id/first_name"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/last_name"
        android:layout_marginTop="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:id="@+id/close_button" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/save"
            android:id="@+id/save_button"/>
    </RelativeLayout>
</RelativeLayout>
