<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_main">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/profile_picture_container"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/default_profile_picture"
                android:id="@+id/profile_picture"/>
            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/camera_icon"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/circle"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:src="@drawable/camera_icon"/>
            </RelativeLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_container"
            android:gravity="center"
            android:layout_below="@id/profile_picture_container"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Arttu Isopahkala"
                android:padding="10dp"
                android:id="@+id/full_name_text"
                android:textStyle="bold"
                android:textSize="24sp"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_name_container"
                android:visibility="gone">
                <EditText
                    android:layout_centerHorizontal="true"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/first_name_text"
                    android:text="Arttu"
                    android:inputType="textCapWords"
                    android:hint="@string/profile_firstname"/>
                <EditText
                    android:layout_centerHorizontal="true"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/last_name_text"
                    android:text="Isopahkala"
                    android:layout_below="@id/first_name_text"
                    android:inputType="textCapWords"
                    android:hint="@string/profile_lastname"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:id="@+id/save_button"
                    android:layout_below="@id/last_name_text"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"/>
            </RelativeLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/name_container"
            android:text="@string/profile_facebook_info"
            android:padding="5dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:id="@+id/facebook_info"
            android:layout_marginTop="20dp"/>
        <com.facebook.login.widget.LoginButton
            facebook:com_facebook_login_text="@string/welcome_facebook"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/fb_login_button"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/facebook_info"
            android:paddingTop="15sp"
            android:paddingBottom="15sp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/fb_login_button"
            android:text="@string/profile_like_app"
            android:padding="5dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:id="@+id/like_info"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_rate"
            android:id="@+id/rate_button"
            android:layout_below="@id/like_info"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</ScrollView>
