<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:background="@drawable/dialog_background"
    android:padding="20dp">
    <TextView
        android:text="@string/share_time_title"
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/time_group"
        android:layout_below="@id/dialog_title"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Oma valinta"
            android:id="@+id/radio_own"
            app:buttonTint="@color/color_text_light" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginBottom="10dp">
            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="-"
                android:textSize="22sp"
                android:gravity="center"
                android:background="@drawable/circle_button"
                android:id="@+id/btn_reduce_time" />
            <TextView
                android:text="@string/share_time_title"
                android:id="@+id/time_until"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_hint"
                android:textSize="14sp"
                android:layout_centerInParent="true"/>
            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="+"
                android:textSize="22sp"
                android:background="@drawable/circle_button"
                android:id="@+id/btn_add_time"/>
        </RelativeLayout>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_time_until_stop"
            android:id="@+id/radio_forever"
            app:buttonTint="@color/color_text_light"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_time_once"
            android:id="@+id/radio_once"
            app:buttonTint="@color/color_text_light"
            android:layout_marginTop="10dp"/>
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/time_group"
        android:layout_marginTop="20dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btn_cancel" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/share"
            android:id="@+id/btn_ready"/>
    </RelativeLayout>
</RelativeLayout>