<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_main" >
    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_sharing_to_you"
        android:textColor="@color/color_main"
        android:background="@android:color/white"
        android:gravity="center"
        android:textSize="14sp"
        android:padding="5dp"
        android:id="@+id/sharing_title"
        android:layout_alignParentTop="true"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/friendsLocationContainer"
        android:layout_below="@id/sharing_title"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@android:color/white">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/share_button"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@android:color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friends_stop_share"
            android:textStyle="bold"
            android:textColor="@color/color_main"
            android:id="@+id/button_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10min jäljellä"
            android:id="@+id/button_time"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:textColor="@color/color_main"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mapPermissionLayout"
        android:background="@color/color_main"
        android:visibility="gone">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="50dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/marker_icon"
            android:id="@+id/loader_icon" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/allowMapButton"
            android:text="@string/map_allow_map"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/map_location_permission_info"
            android:id="@+id/permission_info"
            android:layout_marginBottom="30dp"
            android:layout_above="@id/allowMapButton"
            android:textSize="16sp"/>
    </RelativeLayout>
</RelativeLayout>
